Package_Tools/cairo/package/cairo.pas

unit cairo;

interface

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}

const
  {$IFDEF Linux}
  cairo_lib = 'libcairo.so.2';
  {$ENDIF}

  {$IFDEF Windows}
  cairo_lib = 'libcairo-2.dll';
  {$ENDIF}

  // === Eigenes
type
  Tdouble = double;
  Tcairo_t = Pointer;
  Pcairo_t = ^Tcairo_t;
  Tcairo_surface_t = Pointer;
  Pcairo_surface_t = ^Tcairo_surface_t;
  PPcairo_surface_t = ^Pcairo_surface_t;
  Tcairo_device_t = Pointer;
  Pcairo_device_t = ^Tcairo_device_t;
  Tcairo_pattern_t = Pointer;
  Pcairo_pattern_t = ^Tcairo_pattern_t;
  Tcairo_scaled_font_t = Pointer;
  Pcairo_scaled_font_t = ^Tcairo_scaled_font_t;
  Tcairo_font_face_t = Pointer;
  Pcairo_font_face_t = ^Tcairo_font_face_t;
  Tcairo_font_options_t = Pointer;
  Pcairo_font_options_t = ^Tcairo_font_options_t;
  Tcairo_region_t = Pointer;
  Pcairo_region_t = ^Tcairo_region_t;

  // === cairo-version.h
const
  CAIRO_VERSION_MAJOR = 1;
  CAIRO_VERSION_MINOR = 18;
  CAIRO_VERSION_MICRO = 1;

  // === cairo-features.h
const
  CAIRO_HAS_FC_FONT = 1;
  CAIRO_HAS_FT_FONT = 1;
  CAIRO_HAS_GOBJECT_FUNCTIONS = 1;
  CAIRO_HAS_IMAGE_SURFACE = 1;
  CAIRO_HAS_MIME_SURFACE = 1;
  CAIRO_HAS_OBSERVER_SURFACE = 1;
  CAIRO_HAS_PDF_SURFACE = 1;
  CAIRO_HAS_PNG_FUNCTIONS = 1;
  CAIRO_HAS_PS_SURFACE = 1;
  CAIRO_HAS_RECORDING_SURFACE = 1;
  CAIRO_HAS_SCRIPT_SURFACE = 1;
  CAIRO_HAS_SVG_SURFACE = 1;
  CAIRO_HAS_TEE_SURFACE = 1;
  CAIRO_HAS_USER_FONT = 1;
  CAIRO_HAS_XCB_SHM_FUNCTIONS = 1;
  CAIRO_HAS_XCB_SURFACE = 1;
  CAIRO_HAS_XLIB_SURFACE = 1;
  CAIRO_HAS_XLIB_XRENDER_SURFACE = 1;

  // ===

function CAIRO_VERSION_ENCODE(major, minor, micro: longint): longint;

function cairo_version: longint; cdecl; external cairo_lib;
function cairo_version_string: PChar; cdecl; external cairo_lib;

type
  Pcairo_bool_t = ^Tcairo_bool_t;
  Tcairo_bool_t = longint;
  Tcairo = Tcairo_t;
  Tcairo_surface = Tcairo_surface_t;
  Tcairo_device = Tcairo_device_t;

  Pcairo_matrix = ^Tcairo_matrix;

  Tcairo_matrix = record
    xx: Tdouble;
    yx: Tdouble;
    xy: Tdouble;
    yy: Tdouble;
    x0: Tdouble;
    y0: Tdouble;
  end;
  Tcairo_matrix_t = Tcairo_matrix;
  Pcairo_matrix_t = ^Tcairo_matrix_t;
  Tcairo_pattern = Tcairo_pattern_t;
  Tcairo_destroy_func_t = procedure(Data: pointer); cdecl;
  Pcairo_user_data_key = ^Tcairo_user_data_key;

  Tcairo_user_data_key = record
    unused: longint;
  end;
  Tcairo_user_data_key_t = Tcairo_user_data_key;
  Pcairo_user_data_key_t = ^Tcairo_user_data_key_t;
  Pcairo_status = ^Tcairo_status;
  Tcairo_status = longint;

const
  CAIRO_STATUS_SUCCESS = 0;
  CAIRO_STATUS_NO_MEMORY = 1;
  CAIRO_STATUS_INVALID_RESTORE = 2;
  CAIRO_STATUS_INVALID_POP_GROUP = 3;
  CAIRO_STATUS_NO_CURRENT_POINT = 4;
  CAIRO_STATUS_INVALID_MATRIX = 5;
  CAIRO_STATUS_INVALID_STATUS = 6;
  CAIRO_STATUS_NULL_POINTER = 7;
  CAIRO_STATUS_INVALID_STRING = 8;
  CAIRO_STATUS_INVALID_PATH_DATA = 9;
  CAIRO_STATUS_READ_ERROR = 10;
  CAIRO_STATUS_WRITE_ERROR = 11;
  CAIRO_STATUS_SURFACE_FINISHED = 12;
  CAIRO_STATUS_SURFACE_TYPE_MISMATCH = 13;
  CAIRO_STATUS_PATTERN_TYPE_MISMATCH = 14;
  CAIRO_STATUS_INVALID_CONTENT = 15;
  CAIRO_STATUS_INVALID_FORMAT = 16;
  CAIRO_STATUS_INVALID_VISUAL = 17;
  CAIRO_STATUS_FILE_NOT_FOUND = 18;
  CAIRO_STATUS_INVALID_DASH = 19;
  CAIRO_STATUS_INVALID_DSC_COMMENT = 20;
  CAIRO_STATUS_INVALID_INDEX = 21;
  CAIRO_STATUS_CLIP_NOT_REPRESENTABLE = 22;
  CAIRO_STATUS_TEMP_FILE_ERROR = 23;
  CAIRO_STATUS_INVALID_STRIDE = 24;
  CAIRO_STATUS_FONT_TYPE_MISMATCH = 25;
  CAIRO_STATUS_USER_FONT_IMMUTABLE = 26;
  CAIRO_STATUS_USER_FONT_ERROR = 27;
  CAIRO_STATUS_NEGATIVE_COUNT = 28;
  CAIRO_STATUS_INVALID_CLUSTERS = 29;
  CAIRO_STATUS_INVALID_SLANT = 30;
  CAIRO_STATUS_INVALID_WEIGHT = 31;
  CAIRO_STATUS_INVALID_SIZE = 32;
  CAIRO_STATUS_USER_FONT_NOT_IMPLEMENTED = 33;
  CAIRO_STATUS_DEVICE_TYPE_MISMATCH = 34;
  CAIRO_STATUS_DEVICE_ERROR = 35;
  CAIRO_STATUS_INVALID_MESH_CONSTRUCTION = 36;
  CAIRO_STATUS_DEVICE_FINISHED = 37;
  CAIRO_STATUS_JBIG2_GLOBAL_MISSING = 38;
  CAIRO_STATUS_PNG_ERROR = 39;
  CAIRO_STATUS_FREETYPE_ERROR = 40;
  CAIRO_STATUS_WIN32_GDI_ERROR = 41;
  CAIRO_STATUS_TAG_ERROR = 42;
  CAIRO_STATUS_DWRITE_ERROR = 43;
  CAIRO_STATUS_SVG_FONT_ERROR = 44;
  CAIRO_STATUS_LAST_STATUS = 45;

type
  Tcairo_status_t = Tcairo_status;
  Pcairo_status_t = ^Tcairo_status_t;

type
  Pcairo_content = ^Tcairo_content;
  Tcairo_content = longint;

const
  CAIRO_CONTENT_COLOR = $1000;
  CAIRO_CONTENT_ALPHA = $2000;
  CAIRO_CONTENT_COLOR_ALPHA = $3000;

type
  Tcairo_content_t = Tcairo_content;
  Pcairo_content_t = ^Tcairo_content_t;

type
  Pcairo_format = ^Tcairo_format;
  Tcairo_format = longint;

const
  CAIRO_FORMAT_INVALID = -(1);
  CAIRO_FORMAT_ARGB32 = 0;
  CAIRO_FORMAT_RGB24 = 1;
  CAIRO_FORMAT_A8 = 2;
  CAIRO_FORMAT_A1 = 3;
  CAIRO_FORMAT_RGB16_565 = 4;
  CAIRO_FORMAT_RGB30 = 5;
  CAIRO_FORMAT_RGB96F = 6;
  CAIRO_FORMAT_RGBA128F = 7;

type
  Tcairo_format_t = Tcairo_format;
  Pcairo_format_t = ^Tcairo_format_t;

type
  Pcairo_dither = ^Tcairo_dither;
  Tcairo_dither = longint;

const
  CAIRO_DITHER_NONE = 0;
  CAIRO_DITHER_DEFAULT = 1;
  CAIRO_DITHER_FAST = 2;
  CAIRO_DITHER_GOOD = 3;
  CAIRO_DITHER_BEST = 4;

type
  Tcairo_dither_t = Tcairo_dither;
  Pcairo_dither_t = ^Tcairo_dither_t;

procedure cairo_pattern_set_dither(pattern: Pcairo_pattern_t; dither: Tcairo_dither_t); cdecl; external cairo_lib;
function cairo_pattern_get_dither(pattern: Pcairo_pattern_t): Tcairo_dither_t; cdecl; external cairo_lib;

type
  Tcairo_write_func_t = function(closure: pointer; Data: pbyte; length: dword): Tcairo_status_t; cdecl;
  Tcairo_read_func_t = function(closure: pointer; Data: pbyte; length: dword): Tcairo_status_t; cdecl;
  Pcairo_rectangle_int = ^Tcairo_rectangle_int;

  Tcairo_rectangle_int = record
    x: longint;
    y: longint;
    Width: longint;
    Height: longint;
  end;
  Tcairo_rectangle_int_t = Tcairo_rectangle_int;
  Pcairo_rectangle_int_t = ^Tcairo_rectangle_int_t;

function cairo_create(target: Pcairo_surface_t): Pcairo_t; cdecl; external cairo_lib;
function cairo_reference(cr: Pcairo_t): Pcairo_t; cdecl; external cairo_lib;
procedure cairo_destroy(cr: Pcairo_t); cdecl; external cairo_lib;
function cairo_get_reference_count(cr: Pcairo_t): dword; cdecl; external cairo_lib;
function cairo_get_user_data(cr: Pcairo_t; key: Pcairo_user_data_key_t): pointer; cdecl; external cairo_lib;
function cairo_set_user_data(cr: Pcairo_t; key: Pcairo_user_data_key_t; user_data: pointer; Destroy: Tcairo_destroy_func_t): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_save(cr: Pcairo_t); cdecl; external cairo_lib;
procedure cairo_restore(cr: Pcairo_t); cdecl; external cairo_lib;
procedure cairo_push_group(cr: Pcairo_t); cdecl; external cairo_lib;
procedure cairo_push_group_with_content(cr: Pcairo_t; content: Tcairo_content_t); cdecl; external cairo_lib;
function cairo_pop_group(cr: Pcairo_t): Pcairo_pattern_t; cdecl; external cairo_lib;
procedure cairo_pop_group_to_source(cr: Pcairo_t); cdecl; external cairo_lib;

type
  Pcairo_operator = ^Tcairo_operator;
  Tcairo_operator = longint;

const
  CAIRO_OPERATOR_CLEAR = 0;
  CAIRO_OPERATOR_SOURCE = 1;
  CAIRO_OPERATOR_OVER = 2;
  CAIRO_OPERATOR_IN = 3;
  CAIRO_OPERATOR_OUT = 4;
  CAIRO_OPERATOR_ATOP = 5;
  CAIRO_OPERATOR_DEST = 6;
  CAIRO_OPERATOR_DEST_OVER = 7;
  CAIRO_OPERATOR_DEST_IN = 8;
  CAIRO_OPERATOR_DEST_OUT = 9;
  CAIRO_OPERATOR_DEST_ATOP = 10;
  CAIRO_OPERATOR_XOR = 11;
  CAIRO_OPERATOR_ADD = 12;
  CAIRO_OPERATOR_SATURATE = 13;
  CAIRO_OPERATOR_MULTIPLY = 14;
  CAIRO_OPERATOR_SCREEN = 15;
  CAIRO_OPERATOR_OVERLAY = 16;
  CAIRO_OPERATOR_DARKEN = 17;
  CAIRO_OPERATOR_LIGHTEN = 18;
  CAIRO_OPERATOR_COLOR_DODGE = 19;
  CAIRO_OPERATOR_COLOR_BURN = 20;
  CAIRO_OPERATOR_HARD_LIGHT = 21;
  CAIRO_OPERATOR_SOFT_LIGHT = 22;
  CAIRO_OPERATOR_DIFFERENCE = 23;
  CAIRO_OPERATOR_EXCLUSION = 24;
  CAIRO_OPERATOR_HSL_HUE = 25;
  CAIRO_OPERATOR_HSL_SATURATION = 26;
  CAIRO_OPERATOR_HSL_COLOR = 27;
  CAIRO_OPERATOR_HSL_LUMINOSITY = 28;

type
  Tcairo_operator_t = Tcairo_operator;
  Pcairo_operator_t = ^Tcairo_operator_t;

procedure cairo_set_operator(cr: Pcairo_t; op: Tcairo_operator_t); cdecl; external cairo_lib;
procedure cairo_set_source(cr: Pcairo_t; Source: Pcairo_pattern_t); cdecl; external cairo_lib;
procedure cairo_set_source_rgb(cr: Pcairo_t; red: Tdouble; green: Tdouble; blue: Tdouble); cdecl; external cairo_lib;
procedure cairo_set_source_rgba(cr: Pcairo_t; red: Tdouble; green: Tdouble; blue: Tdouble; alpha: Tdouble); cdecl; external cairo_lib;
procedure cairo_set_source_surface(cr: Pcairo_t; surface: Pcairo_surface_t; x: Tdouble; y: Tdouble); cdecl; external cairo_lib;
procedure cairo_set_tolerance(cr: Pcairo_t; tolerance: Tdouble); cdecl; external cairo_lib;

type
  Pcairo_antialias = ^Tcairo_antialias;
  Tcairo_antialias = longint;

const
  CAIRO_ANTIALIAS_DEFAULT = 0;
  CAIRO_ANTIALIAS_NONE = 1;
  CAIRO_ANTIALIAS_GRAY = 2;
  CAIRO_ANTIALIAS_SUBPIXEL = 3;
  CAIRO_ANTIALIAS_FAST = 4;
  CAIRO_ANTIALIAS_GOOD = 5;
  CAIRO_ANTIALIAS_BEST = 6;

type
  Tcairo_antialias_t = Tcairo_antialias;
  Pcairo_antialias_t = ^Tcairo_antialias_t;

procedure cairo_set_antialias(cr: Pcairo_t; antialias: Tcairo_antialias_t); cdecl; external cairo_lib;

type
  Pcairo_fill_rule = ^Tcairo_fill_rule;
  Tcairo_fill_rule = longint;

const
  CAIRO_FILL_RULE_WINDING = 0;
  CAIRO_FILL_RULE_EVEN_ODD = 1;

type
  Tcairo_fill_rule_t = Tcairo_fill_rule;
  Pcairo_fill_rule_t = ^Tcairo_fill_rule_t;

procedure cairo_set_fill_rule(cr: Pcairo_t; fill_rule: Tcairo_fill_rule_t); cdecl; external cairo_lib;
procedure cairo_set_line_width(cr: Pcairo_t; Width: Tdouble); cdecl; external cairo_lib;
procedure cairo_set_hairline(cr: Pcairo_t; set_hairline: Tcairo_bool_t); cdecl; external cairo_lib;

type
  Pcairo_line_cap = ^Tcairo_line_cap;
  Tcairo_line_cap = longint;

const
  CAIRO_LINE_CAP_BUTT = 0;
  CAIRO_LINE_CAP_ROUND = 1;
  CAIRO_LINE_CAP_SQUARE = 2;

type
  Tcairo_line_cap_t = Tcairo_line_cap;
  Pcairo_line_cap_t = ^Tcairo_line_cap_t;

procedure cairo_set_line_cap(cr: Pcairo_t; line_cap: Tcairo_line_cap_t); cdecl; external cairo_lib;

type
  Pcairo_line_join = ^Tcairo_line_join;
  Tcairo_line_join = longint;

const
  CAIRO_LINE_JOIN_MITER = 0;
  CAIRO_LINE_JOIN_ROUND = 1;
  CAIRO_LINE_JOIN_BEVEL = 2;

type
  Tcairo_line_join_t = Tcairo_line_join;
  Pcairo_line_join_t = ^Tcairo_line_join_t;
